--- a/Ackerman.ioc
+++ b/Ackerman.ioc
@@ -2,68 +2,51 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.Request0=USART2_RX
-Dma.RequestsNb=1
-Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART2_RX.0.Instance=DMA1_Stream5
-Dma.USART2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART2_RX.0.Mode=DMA_NORMAL
-Dma.USART2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F401CCU6
 Mcu.Family=STM32F4
-Mcu.IP0=DMA
-Mcu.IP1=NVIC
-Mcu.IP10=USART1
-Mcu.IP11=USART2
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM1
-Mcu.IP5=TIM2
-Mcu.IP6=TIM3
-Mcu.IP7=TIM4
-Mcu.IP8=TIM5
-Mcu.IP9=TIM9
-Mcu.IPNb=12
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
+Mcu.IP2=SYS
+Mcu.IP3=TIM1
+Mcu.IP4=TIM2
+Mcu.IP5=TIM3
+Mcu.IP6=TIM4
+Mcu.IP7=TIM5
+Mcu.IP8=TIM9
+Mcu.IP9=USART1
+Mcu.IPNb=10
 Mcu.Name=STM32F401C(B-C)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PH0 - OSC_IN
 Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin10=PB0
-Mcu.Pin11=PA8
-Mcu.Pin12=PA9
-Mcu.Pin13=PA10
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PB6
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB6
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin17=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM9_VS_ClockSourceINT
 Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM9_VS_ClockSourceINT
 Mcu.Pin3=PA1
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA4
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=22
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PA8
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401CCUx
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -76,7 +59,6 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_BRK_TIM9_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.Signal=S_TIM5_CH1
 PA1.GPIOParameters=GPIO_Label
@@ -88,10 +70,6 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA2.Mode=Asynchronous
-PA2.Signal=USART2_TX
-PA3.Mode=Asynchronous
-PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=L_DIR
 PA4.Locked=true
@@ -99,9 +77,19 @@ PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=L_PWM
 PA5.Signal=S_TIM2_CH1_ETR
+PA6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA6.GPIO_Label=R_ENCODER_A
+PA6.GPIO_PuPd=GPIO_NOPULL
 PA6.Signal=S_TIM3_CH1
+PA7.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA7.GPIO_Label=R_ENCODER_B
+PA7.GPIO_PuPd=GPIO_NOPULL
 PA7.Signal=S_TIM3_CH2
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=L_ENCODER_B
 PA8.Signal=S_TIM1_CH1
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=L_ENCODER_A
 PA9.Signal=S_TIM1_CH2
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=R_DIR
@@ -144,7 +132,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true,10-MX_TIM9_Init-TIM9-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM5_Init-TIM5-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_TIM9_Init-TIM9-false-HAL-true
 RCC.48MHZClocksFreq_Value=42000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -198,8 +186,8 @@ TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Presca
 TIM2.Period=(160-1)
 TIM2.Prescaler=(21-1)
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
-TIM3.IC1Filter=10
-TIM3.IC2Filter=10
+TIM3.IC1Filter=0
+TIM3.IC2Filter=0
 TIM3.IPParameters=IC1Filter,IC2Filter,EncoderMode
 TIM4.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
 TIM4.Period=10000-1
@@ -211,12 +199,10 @@ TIM5.Period=20000-1
 TIM5.Prescaler=84-1
 TIM5.Pulse-PWM\ Generation1\ CH1=1500-1
 TIM9.IPParameters=Prescaler,Period
-TIM9.Period=50000-1
-TIM9.Prescaler=(84-1)
+TIM9.Period=20000-1
+TIM9.Prescaler=83
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
-USART2.IPParameters=VirtualMode
-USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
