--- a/Ackerman.ioc
+++ b/Ackerman.ioc
@@ -61,8 +61,7 @@ NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.Signal=S_TIM5_CH1
-PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=R_PWM
+PA1.Locked=true
 PA1.Signal=S_TIM2_CH2
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
@@ -74,8 +73,6 @@ PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=L_DIR
 PA4.Locked=true
 PA4.Signal=GPIO_Output
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=L_PWM
 PA5.Signal=S_TIM2_CH1_ETR
 PA6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA6.GPIO_Label=R_ENCODER_A
@@ -182,9 +179,9 @@ TIM1.IC2Filter=10
 TIM1.IPParameters=IC1Filter,IC2Filter,EncoderMode
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Channel-PWM Generation2 CH2
 TIM2.Period=(160-1)
-TIM2.Prescaler=(21-1)
+TIM2.Prescaler=(7-1)
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
 TIM3.IC1Filter=0
 TIM3.IC2Filter=0
